--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.17",
+    "@polkadot/api": "9.13.6",
+    "@polkadot/api-augment": "9.13.6",
+    "@polkadot/api-contract": "^10.6.1",
+    "@polkadot/extension-dapp": "^0.44.6",
+    "@polkadot/react-identicon": "^2.11.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -43,6 +48,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "@types/chai": "^4.3.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
   }
